@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2007-01-16
+ChangeLog - 2007-01-17
 
 
 Version 0.2.4 (under dev!):
+   * fixed crash when closing a buffer opened on many windows
    * fixed freeze with SSL server when disconnecting after connection loss
      (bug #18735)
 
